--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@
 !*/
 
 # You can be specific with these rules
-!/admin/controller/extension/total/tax.php
+#choose file to push
+!rajaongkir
 !.gitignore
